avançando no projeto

--- a/mortgage-repayment-calculator-main/index.html
+++ b/mortgage-repayment-calculator-main/index.html
@@ -24,17 +24,17 @@
         <h3>Valor da hipoteca</h3>
         <div class="row">
           <label for="valor" id="valor-label">R$</label>
-          <input type="text" name="valor" id="valor" placeholder="EX: 300,000">
+          <input type="text" name="valor" id="valor" >
         </div>
         <div class="row">
           <div class="column">
             <h3>prazo da hipoteca</h3>
-            <input type="text" name="prazo" id="prazo" placeholder="EX: 25">
+            <input type="text" name="prazo" id="prazo">
           </div>
           <label for="prazo" id="prazo-label">Anos</label>
           <div class="column">
             <h3>taxa de juro</h3>
-            <input type="text" name="juro" id="juro" placeholder="EX: 5.25">
+            <input type="text" name="juro" id="juro">
           </div>
           <label for="juro" id="juro-label">%</label>
         </div>
