--- a/mortgage-repayment-calculator-main/index.html
+++ b/mortgage-repayment-calculator-main/index.html
@@ -61,14 +61,14 @@
     </div>
     <div class="resultado-completo">
       <h1>Seus resultados</h1>
-      <p>Seus resultados são mostrados abaixo com base nas informações que você forneceu. 
+      <p id="">Seus resultados são mostrados abaixo com base nas informações que você forneceu. 
       Para ajustar os resultados, edite o formulário e clique novamente em “calcular reembolsos”.</p>
       <div class="result-numbers">
           <p>seus pagamentos mensais</p>
-          <span id="number"></span>
-
+          <span id="number"> R$ 10000</span>
+            <hr>
           <p>total que você pagará ao longo do prazo</p>
-          <span id="number-white"></span>
+          <span id="number-white"> R$ 20000</span>
       </div>
 
     </div>
