--- a/mortgage-repayment-calculator-main/index.html
+++ b/mortgage-repayment-calculator-main/index.html
@@ -42,11 +42,11 @@
         </div>
         <h3>Tipo de hipoteca</h3>
         
-        <div class="radio" id="radio-Repayment">
-          <input type="radio" name="escolha" id="Repayment" >
-          <label for="Repayment" id="Repayment-label" class="label-radio">Reembolso</label>
+        <div class="radio" id="radio-r">
+          <input type="radio" name="escolha" id="repayment" >
+          <label for="repayment" id="Repayment-label" class="label-radio">Reembolso</label>
         </div>
-        <div class="radio" id="radio-juros">
+        <div class="radio" id="radio-j">
           <input type="radio" name="escolha" id="juros">
           <label for="juros" id="juros-label" class="label-radio">apenas juros</label>
         </div>
@@ -65,10 +65,10 @@
       Para ajustar os resultados, edite o formulário e clique novamente em “calcular reembolsos”.</p>
       <div class="result-numbers">
           <p>seus pagamentos mensais</p>
-          <span id="number"> R$ 10000</span>
+          <span id="number"></span>
             <hr>
           <p>total que você pagará ao longo do prazo</p>
-          <span id="number-white"> R$ 20000</span>
+          <span id="number-white"></span>
       </div>
 
     </div>
