--- a/mortgage-repayment-calculator-main/index.html
+++ b/mortgage-repayment-calculator-main/index.html
@@ -25,21 +25,27 @@
       </div>
         <h3>Valor da hipoteca</h3>
         <div class="row">
-          <label for="valor" id="valor-label">R$</label>
-          <input type="text" name="valor" id="valor" >
+          <div class="row-div">
+            <label for="valor" id="valor-label">R$</label>
+            <input type="text" name="valor" id="valor" >
+          </div>
         </div>
         <div class="row">
-          <div class="column">
-            <h3>prazo da hipoteca</h3>
-            <input type="text" name="prazo" id="prazo">
+          <div class="row-div">
+            <div class="column">
+              <h3>prazo da hipoteca</h3>
+              <input type="text" name="prazo" id="prazo">
+            </div>
+            <label for="prazo" id="prazo-label">Anos</label>
           </div>
-          <label for="prazo" id="prazo-label">Anos</label>
-          <div class="column">
-            <h3>taxa de juro</h3>
-            <input type="text" name="juro" id="juro">
+          <div class="row-div">
+            <div class="column">
+              <h3>taxa de juro</h3>
+              <input type="text" name="juro" id="juro">
+            </div>
+            <label for="juro" id="juro-label" >%</label>
+                    </div>
           </div>
-          <label for="juro" id="juro-label" >%</label>
-        </div>
         <h3>Tipo de hipoteca</h3>
         
         <div class="radio" id="radio-r">
