--- a/mortgage-repayment-calculator-main/index.html
+++ b/mortgage-repayment-calculator-main/index.html
@@ -44,17 +44,19 @@
               <input type="text" name="juro" id="juro">
             </div>
             <label for="juro" id="juro-label" >%</label>
-                    </div>
+          </div>
           </div>
         <h3>Tipo de hipoteca</h3>
         
-        <div class="radio" id="radio-r">
-          <input type="radio" name="escolha" id="repayment" >
-          <label for="repayment" id="Repayment-label" class="label-radio">Reembolso</label>
-        </div>
-        <div class="radio" id="radio-j">
-          <input type="radio" name="escolha" id="juros">
-          <label for="juros" id="juros-label" class="label-radio">apenas juros</label>
+        <div class="teste">
+          <div class="radio" id="radio-r">
+            <input type="radio" name="escolha" id="repayment" >
+            <label for="repayment" id="Repayment-label" class="label-radio">Reembolso</label>
+          </div>
+          <div class="radio" id="radio-j">
+            <input type="radio" name="escolha" id="juros">
+            <label for="juros" id="juros-label" class="label-radio">apenas juros</label>
+          </div>
         </div>
         <button id="button-calc"> <img src="assets/images/icon-calculator.svg" alt="calculadora">Calcular reembolsos</button>
       </div>
